ecmascript/parser/tests/test262-error-references/fail/dc0415f1b65b4924.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/dc0415f1b65b4924.js:1:13
  |
1 | ({ "chance" }) = obj
  |             ^

error: TS2406
 --> $DIR/tests/test262-parser/fail/dc0415f1b65b4924.js:1:1
  |
1 | ({ "chance" }) = obj
  | ^^^^^^^^^^^^^^

